--- a/index.html
+++ b/index.html
@@ -39,6 +39,17 @@
       <div class="line line-2">
         <svg xmlns="http://www.w3.org/2000/svg" width="318" height="210.917" viewBox="0 0 318 210.917">
           <line class="line--el" id="line-1" data-name="line 2" x1="317" y2="210" transform="translate(0.5 0.417)" />
+          <circle fill="none" cx="71.5" cy="77.5" r="51.5" stroke="#88CE02" stroke-width="4" />
+          <ellipse
+            fill="none"
+            stroke="#88CE02"
+            stroke-width="4"
+            stroke-miterlimit="10"
+            cx="241.4"
+            cy="77.5"
+            rx="78.9"
+            ry="51.5"
+          />
         </svg>
         <svg
           version="1.1"
