--- a/index.html
+++ b/index.html
@@ -38,7 +38,16 @@
     <div class="container">
       <div class="line line-2">
         <svg xmlns="http://www.w3.org/2000/svg" width="318" height="210.917" viewBox="0 0 318 210.917">
-          <line class="line--el" id="line-1" data-name="line 2" x1="317" y2="210" transform="translate(0.5 0.417)" />
+          <line
+            class="line--el"
+            id="line-1"
+            data-name="line 2"
+            x1="317"
+            y2="210"
+            stroke="yellow"
+            stroke-width="4"
+            transform="translate(0.5 0.417)"
+          />
           <circle fill="none" cx="71.5" cy="77.5" r="51.5" stroke="#88CE02" stroke-width="4" />
           <ellipse
             fill="none"
