--- a/index.html
+++ b/index.html
@@ -36,57 +36,148 @@
 
   <body>
     <div class="container">
-      <div class="line line-2">
-        <svg xmlns="http://www.w3.org/2000/svg" width="318" height="210.917" viewBox="0 0 318 210.917">
-          <line
-            class="line--el"
-            id="line-1"
-            data-name="line 2"
-            x1="317"
-            y2="210"
-            stroke="yellow"
-            stroke-width="4"
-            transform="translate(0.5 0.417)"
-          />
-          <circle fill="none" cx="71.5" cy="77.5" r="51.5" stroke="#88CE02" stroke-width="4" />
-          <ellipse
-            fill="none"
-            stroke="#88CE02"
-            stroke-width="4"
-            stroke-miterlimit="10"
-            cx="241.4"
-            cy="77.5"
-            rx="78.9"
-            ry="51.5"
-          />
-        </svg>
-        <svg
-          version="1.1"
-          baseProfile="tiny"
-          id="Layer_1"
-          xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink"
-          x="0px"
-          y="0px"
-          width="570px"
-          height="150px"
-          viewBox="0 0 570 150"
-          xml:space="preserve"
-        >
-          <circle fill="none" cx="71.5" cy="77.5" r="51.5" stroke="#88CE02" stroke-width="4" />
-          <ellipse
-            fill="none"
-            stroke="#88CE02"
-            stroke-width="4"
-            stroke-miterlimit="10"
-            cx="241.4"
-            cy="77.5"
-            rx="78.9"
-            ry="51.5"
-          />
-        </svg>
-      </div>
-      <p class="text text-beau text-2" id="text-2">test</p>
+      <section class="moon-map">
+        <div class="moon-map__container">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 529.4677 556.5">
+            <defs>
+              <style>
+                .cls-1,
+                .cls-11,
+                .cls-12,
+                .cls-13,
+                .cls-14 {
+                  fill: none;
+                  stroke-miterlimit: 10;
+                }
+                .cls-1 {
+                  stroke: #8c8c8c;
+                  opacity: 0.2;
+                }
+                .cls-2 {
+                  fill: #b69253;
+                }
+                .cls-10,
+                .cls-2,
+                .cls-3,
+                .cls-4,
+                .cls-5,
+                .cls-6,
+                .cls-7,
+                .cls-8,
+                .cls-9 {
+                  isolation: isolate;
+                }
+                .cls-3 {
+                  fill: #f2f2f2;
+                }
+                .cls-4 {
+                  fill: #96793f;
+                }
+                .cls-5 {
+                  fill: #7e622d;
+                }
+                .cls-6 {
+                  fill: #c1a967;
+                }
+                .cls-7 {
+                  fill: #b1a461;
+                }
+                .cls-8 {
+                  fill: #7e602e;
+                }
+                .cls-9 {
+                  fill: #836630;
+                }
+                .cls-10 {
+                  fill: #886e3c;
+                }
+                .cls-11,
+                .cls-12 {
+                  stroke: #666;
+                }
+                .cls-11,
+                .cls-14 {
+                  opacity: 0.2;
+                }
+                .cls-12 {
+                  opacity: 0.5;
+                }
+                .cls-13,
+                .cls-14 {
+                  stroke: #898989;
+                }
+                .cls-13 {
+                  opacity: 0.3;
+                  visibility: hidden;
+                }
+              </style>
+            </defs>
+            <g id="Layer_2" data-name="Layer 2">
+              <g id="Layer_2-2" data-name="Layer 2">
+                <circle class="cls-1" cx="261.0944" cy="270.5" r="189" />
+                <circle class="cls-2" id="moon-end" cx="263.5035" cy="31.0909" r="31.0909" />
+
+                <path
+                  class="cls-4"
+                  d="M447.5181,115.89a30.8081,30.8081,0,0,1,11.7686-24.2418,30.8762,30.8762,0,1,0,4.5392,51.4648A30.8633,30.8633,0,0,1,447.5181,115.89Z"
+                />
+                <path
+                  class="cls-5"
+                  d="M528.2262,305.5c-17.3242,0-31.3683-12.3122-31.3683-27.5,0-14.8719,13.4683-26.9786,30.2939-27.4762a31.3665,31.3665,0,1,0,2.3159,54.9487C529.0552,305.4866,528.6426,305.5,528.2262,305.5Z"
+                />
+                <path
+                  class="cls-6"
+                  d="M451.0944,481.5c-18.7777,0-34-12.5361-34-28s15.2223-28,34-28a40.7417,40.7417,0,0,1,10.1478,1.2692A36.13,36.13,0,0,0,444.0944,422.5c-18.7777,0-34,13.9911-34,31.25s15.2223,31.25,34,31.25a35.9828,35.9828,0,0,0,18.88-5.2607A40.4576,40.4576,0,0,1,451.0944,481.5Z"
+                />
+                <path
+                  class="cls-7"
+                  d="M94.8444,424.5A29.3443,29.3443,0,0,0,76.55,430.918,32.1975,32.1975,0,0,1,88.8444,428.5c16.7066,0,30.25,12.536,30.25,28s-13.5434,28-30.25,28a32.4314,32.4314,0,0,1-9.3869-1.3815A29.2008,29.2008,0,0,0,94.8444,487.5c16.7066,0,30.25-14.103,30.25-31.5S111.551,424.5,94.8444,424.5Z"
+                />
+                <path
+                  class="cls-8"
+                  d="M16.0944,242.5A34.0654,34.0654,0,0,0,0,246.502c.0316,0,.0627-.002.0944-.002,18.2254,0,33,12.536,33,28,0,14.9413-13.7937,27.1468-31.1654,27.9548A34.1732,34.1732,0,0,0,16.0944,305.5c18.2254,0,33-14.103,33-31.5S34.32,242.5,16.0944,242.5Z"
+                />
+                <path
+                  class="cls-9"
+                  d="M78.5944,89.5a31.3452,31.3452,0,0,0-17.3133,5.1882,31.4928,31.4928,0,0,1,1.6266,53.6236A31.4984,31.4984,0,1,0,78.5944,89.5Z"
+                />
+                <path
+                  class="cls-10"
+                  d="M270.0944,486.5c-16.2924,0-31.5,14.8591-31.5,34.4776S251.802,556.5,268.0944,556.5c.6729,0,1.3383-.0369,2-.09Z"
+                />
+                <polygon
+                  class="cls-11"
+                  points="419.051 362.274 260.366 453.891 101.681 362.274 101.681 179.04 260.366 87.423 419.051 179.04 419.051 362.274"
+                />
+                <polygon
+                  class="cls-12"
+                  points="337.594 316.051 259.594 361.735 181.594 316.051 181.594 224.684 259.594 179 337.594 224.684 337.594 316.051"
+                />
+                <polygon class="cls-13" points="260.352 87 103.974 362 416.731 362 260.352 87" />
+                <polygon class="cls-14" points="259.663 454 417.731 179 101.594 179 259.663 454" />
+                <line class="cls-11" x1="101.5944" y1="179" x2="416.5944" y2="362" />
+                <line class="cls-12" x1="101.5944" y1="362" x2="417.5944" y2="179" />
+                <line class="cls-12" x1="260.5944" y1="87" x2="260.5944" y2="454" />
+                <line class="cls-11" x1="181.5944" y1="316" x2="337.5944" y2="316" />
+                <line class="cls-12" x1="181.5944" y1="225" x2="337.5944" y2="225" />
+                <line class="cls-11" x1="259.5944" y1="362" x2="101.5944" y2="179" />
+                <line class="cls-12" x1="417.5944" y1="179" x2="259.5944" y2="362" />
+                <line class="cls-12" x1="259.5944" y1="179" x2="103.5944" y2="362" />
+                <line class="cls-12" x1="418.5944" y1="362" x2="259.5944" y2="179" />
+                <line class="cls-12" x1="101.5944" y1="362" x2="337.5944" y2="316" />
+                <line class="cls-11" x1="416.5944" y1="362" x2="181.5944" y2="316" />
+                <line class="cls-11" x1="417.5944" y1="179" x2="181.5944" y2="225" />
+                <line class="cls-12" x1="101.5944" y1="179" x2="337.5944" y2="225" />
+                <line class="cls-11" x1="260.5944" y1="87" x2="181.5944" y2="316" />
+                <line class="cls-11" x1="337.5944" y1="316" x2="260.5944" y2="87" />
+                <line class="cls-11" x1="260.5944" y1="454" x2="181.5944" y2="225" />
+                <line class="cls-11" x1="337.5944" y1="225" x2="260.5944" y2="454" />
+                <circle class="cls-11" cx="260.0944" cy="270.5" r="45.5" />
+              </g>
+            </g>
+          </svg>
+        </div>
+      </section>
     </div>
 
     <script src="src/index.js"></script>
